# mcp-testing-todo-app-01

./: README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  crud.py  dependencies.py  main.py  models.py  schemas.py
backend/tests/: test_todos.py
frontend/: jest.config.cjs  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ReactQueryClientProvider.tsx  TodoForm.tsx  TodoList.tsx
frontend/hooks/: useTodos.ts
frontend/lib/: api.ts
