[project]
name = "mcp-testing-todo-backend"
version = "0.1.0"
description = "FastAPI backend for MCP Testing Todo App"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
